@@ -1,6 +1,7 @@
 2.7.2
 
 o Process destination name tree in Pdfpage.pdf_of_pages
+o Options to change the whitespace between operators
 
 2.7.1 (July 2024)
 
